<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">商鼎贷</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="home">首页</string>
    <string name="myaccount">我的账户</string>
    <string name="login_username_hint">账号</string>
    <string name="login_password_hint">密码</string>
    <string name="tips">提示</string>
    <string name="more">更多</string>
    <string name="tzlc">投资理财</string>
    <string name="wdzh">我的账户</string>
    <string name="xszx">新手专享</string>
    <string name="xszx_msg" formatted="false">最高18%预期年收益，100%本息保障，新手福利，收益多，现在注册还送红包哦</string>
    <string name="sbtz">散标投资</string>
    <string name="sbtz_msg" formatted="false">50元起投，12W 18%预期年化收益期限灵活，自由选择，月月有收益</string>
    <string name="djdl">点击登陆</string>
    <string name="dl_msg">登陆即可投资并查看个人资产情况</string>
    <string name="bbh">版本号</string>
    <string name="bbh_msg" formatted="false">V1.0</string>
    <string name="gfwx">官方微信</string>
    <string name="gfwx_msg">微信号：商鼎贷</string>
    <string name="gfwb">官方微博</string>
    <string name="gfwb_msg" formatted="false">http://weibo.com/shangdingdai</string>
    <string name="kfdh">客服电话</string>
    <string name="kfdh_msg">400-168-3966</string>
    <string name="tsgx">推送更新</string>
    <string name="gzsj">客服工作时间：9:00-21:00</string>
    <string name="ljty">立即体验</string>
    <string name="zcgl">资产管理</string>
    <string name="tzgl">投资管理</string>
    <string name="jlcx">记录查询</string>
    <string name="wdyhk">我的银行卡</string>
    <string name="wdxx">我的消息</string>
    <string name="zhaq">账户安全</string>
    <string name="aqdj">安全等级:</string>
    <string name="ssmm">手势密码</string>
    <string name="ssmm_msg">已设置，点击修改</string>
    <string name="login">登录</string>
    <string name="register_txt1">没有账号？</string>
    <string name="register_txt2">注册 ></string>
    <string name="ydl">已登录</string>
    <string name="ydl_msg">点击查看个人资产情况</string>
    <string name="register">注册</string>
    <string name="tel">请输入手机号</string>
    <string name="qh">+86</string>
    <string name="sryzm">输入验证码</string>
    <string name="yzm">验证码</string>
    <string name="fsyzm">发送验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="tkxx">我已阅读并同意</string>
    <string name="nick">昵称</string>
    <string name="nick_msg">请输入你的昵称</string>
    <string name="psd">密码</string>
    <string name="psd_msg">请输入密码</string>
    <string name="psd_again">确认密码</string>
    <string name="psd_again_msg">请再次输入密码</string>
    <string name="wc">完成</string>
    <string name="set_account">设置昵称/密码</string>
    <string name="yhxx">用户信息</string>
    <string name="user_img">头像</string>
    <string name="sex">性别</string>
    <string name="csrq">出生日期</string>
    <string name="exits">退出</string>
    <string name="xy">《商鼎贷使用协议》</string>
    <string name="zcxy">注册协议</string>
    <string name="mr">默认</string>
    <string name="lv">利率</string>
    <string name="je">金额</string>
    <string name="qx">期限</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xq">详情</string>
    <string name="xstyb">新手体验标</string>
    <string name="nlv">年利率</string>
    <string name="yqlv">预期利率</string>
    <string name="syqx">剩余期限</string>
    <string name="zrjg">转让价格</string>
    <string name="xmid">项目ID:</string>
    <string name="jkje">借款金额:</string>
    <string name="hkfs">还款方式:</string>
    <string name="fbrq">发标日期:</string>
    <string name="xmjs">项目介绍</string>
    <string name="shxx">审核信息</string>
    <string name="fksh">风控审核</string>
    <string name="xgwj">相关文件</string>
    <string name="tbjl">投标记录</string>
    <string name="hklb">还款列表</string>
    <string name="zwxx">暂无信息!</string>
    <string name="mqtzze">目前投资总额：</string>
    <string name="sytzje">剩余投资金额：</string>
    <string name="tbr">投标人</string>
    <string name="tbje">投标金额</string>
    <string name="tbsj">投标时间</string>
    <string name="hbx">一共需要还本息：</string>
    <string name="hkrq">还款日期</string>
    <string name="qs">期数</string>
    <string name="yhje">应还金额</string>
    <string name="hkzt">还款状态</string>
    <string name="yjs">已结束</string>
    <string name="mstb">马上投标</string>
    <string name="fksh_msg">本借款项目已严格做好风险控制，多重措施最大程度保障投资人利益:\n措施一\n合作机构风险控制部已对该借款项目做好风控审核，对本借款承担无限连带责任保证担保;\n措施二\n商鼎贷风险储备金账户对本借款项目提供本息保障，借款人出现逾期的情况，商鼎贷会启动风险储备金账户提供等额的资金垫付给投资人</string>
    <string name="yjj">已拒绝</string>
    <string name="ymb">已满标</string>
    <string name="hkz">还款中</string>
    <string name="shz">审核中</string>
    <string name="rz_msg">投资前，请先完成安全认证</string>
    <string name="smrz">实名认证</string>
    <string name="wrz_msg">未认证</string>
    <string name="yrz_msg">已认证</string>
    <string name="bdsj">绑定手机</string>
    <string name="bdsj_msg">手机信息</string>
    <string name="rzyx">认证邮箱</string>
    <string name="tj">提交</string>
    <string name="input_real_name">请输入你的真实姓名</string>
    <string name="input_real_cardId">请输入你的身份证号</string>
    <string name="input_email">请输入你要绑定邮箱的地址</string>
    <string name="input_email_hint">请输入邮箱地址</string>
    <string name="is_ok">确定</string>
    <string name="xgbdsj">修改绑定手机</string>
    <string name="input_yzm">请输入验证码</string>
    <string name="ysjhm">原手机号码：</string>
    <string name="zhye">账户余额</string>
    <string name="tzzc">投资资产</string>
    <string name="dsbx">待收本息</string>
    <string name="zhjzc">账户净资产(元)</string>
    <string name="kyye">可用余额(元)</string>
    <string name="djje">冻结金额(元)</string>
    <string name="zwjl">暂无记录!</string>
    <string name="tbz">投标中</string>
    <string name="yhq">已还清</string>
    <string name="jyjl">交易记录</string>
    <string name="hzcx">回账查询</string>
    <string name="bdxsj">绑定新手机</string>
    <string name="sjh_msg">输入新手机号获取验证码</string>
    <string name="up_email">修改邮箱</string>
    <string name="my_red_pager">我的红包</string>
    <string name="wsy">未使用</string>
    <string name="ysy">已使用</string>
    <string name="ygq">已过期</string>
    <string name="gfgg">官方公告</string>
    <string name="xtxx">系统消息</string>
    <string name="user_name">用户名</string>
    <string name="user_tel">电话</string>
    <string name="xgbdyx">修改绑定邮箱</string>
    <string name="yyxdz">原邮箱地址</string>
    <string name="bdxyx">绑定新邮箱</string>
    <string name="input_new_email">请填写新邮箱地址</string>
    <string name="cz">充值</string>
    <string name="tx">提现</string>
    <string name="toubiao">投标</string>
    <string name="syktje">剩余可投金额：</string>
    <string name="zhkyye">账户可用余额：</string>
    <string name="syktje_msg">0.00元</string>
    <string name="zhkyye_msg">0.00元</string>
    <string name="bb_msg">本标最低投资金50元</string>
    <string name="qdtz">确定投资</string>
    <string name="zf">确定支付</string>
    <string name="input_cz_money">请输入充值金额</string>
    <string name="cz_money">充值金额</string>
    <string name="sj_cz_money">实际到账金额</string>
    <string name="czfs">充值方式</string>
    <string name="skze">未来一个月您的收款总额为：</string>
    <string name="shouyiid">收益ID：</string>
    <string name="jine">金额：</string>
    <string name="yinghuanshijian">应还时间：</string>
    <string name="hb_item_title">投资抵用券</string>
    <string name="hb_item_sygz">使用规则：</string>
    <string name="hb_item_sygz_msg">单笔投资满一定额度时，可使用此券</string>
    <string name="hb_item_time">2016-09-26</string>
    <string name="gesture_psd">手势密码</string>
    <string name="gesture_psd_hint_psd">请绘制手势密码</string>
    <string name="gesture_psd_hint_psd_again">请再次绘制手势密码</string>
    <string name="gesture_psd_hint_psd_difference">两次密码不一致！</string>
    <string name="gesture_psd_hint_psd_short">密码长度至少4位！</string>
    <string name="gesture_psd_hint_psd_success">密码绘制成功！</string>
    <string name="forget_psd">忘记密码</string>
    <string name="login_again">重新登陆</string>
    <string name="gesture_draw_psd">请绘制解锁密码</string>
    <string name="unlock_success">解锁成功！</string>
    <string name="psd_error">密码错误，请重新登陆！</string>
    <string name="unlock_error">密码错误！</string>
    <string name="no_setting">未设置，点击设置</string>
    <string name="no_user_msg">找不到用户信息</string>
    <string name="tv_txje">提现金额</string>
    <string name="tv_txje_msg">最低提现100元</string>
    <string name="tv_txfs">提现方式</string>
    <string name="tv_pttx">普通提现</string>
    <string name="tv_jjtx">加急提现</string>
    <string name="tv_txfy">提现费用</string>
    <string name="tv_sjdz">实际到账</string>
    <string name="tx_msg">1-2个工作日到帐（双休日和法定节假日除外）</string>
    <string name="tx_ok">确定提现</string>
    <string name="tx_input_error">余额不足，不能提现！</string>
    <string name="tx_min_msg">提现金额最少100元</string>
    <string name="tx_null_msg">提现金额不能为空！</string>
    <string name="tv_network_available">没有可用网络，请检查网络设置!</string>
     <string name="xxts">消息推送</string>

</resources>