<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_bar"
        layout="@layout/layout_title" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >
		 <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp" >

            <EditText
                android:id="@+id/et_newtel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/sjh_msg"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btn_newtel_send"
                style="@style/txt_titleStyle1"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/hqyzm"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_login_selector"
                android:textSize="12sp" />
        </RelativeLayout>

		 <TextView
		     android:id="@+id/rz_msg"
		     android:layout_width="match_parent"
		     android:layout_height="wrap_content"
		     android:layout_marginTop="18dp"
		     android:layout_marginBottom="18dp"
		     android:text="@string/input_yzm" />

		  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
             >

            <EditText
                android:id="@+id/et_newtel_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/sryzm"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_newtel_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_login_selector"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/tj"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
</LinearLayout>

</LinearLayout>
