<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <include  android:id="@+id/layout_bar" layout="@layout/layout_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
            <EditText
                android:id="@+id/tel_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:drawableLeft="@drawable/register_tell"
                android:drawablePadding="25dip"
                android:hint="@string/tel"
                android:inputType="phone"
                android:paddingLeft="24dp"
                android:singleLine="true"
                android:maxLength="11"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />

        </RelativeLayout>
		 <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:drawableLeft="@drawable/register_yzm"
                android:drawablePadding="25dip"
                android:hint="@string/sryzm"
                android:inputType="phone"
                android:paddingLeft="24dp"
                android:maxLength="6"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />


            <Button
                android:id="@+id/btn_send"
                style="@style/txt_titleStyle1"
                android:layout_width="80dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:enabled="false"
                android:text="@string/hqyzm"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"
                android:background="@drawable/btn_login_selector"
                android:textSize="12sp" />
        </RelativeLayout>

		 <RelativeLayout
		    android:layout_width="match_parent"
            android:layout_marginTop="4dp"
            android:layout_height="48dp"
		     >
		 <CheckBox
		     android:id="@+id/checkbox"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_centerVertical="true"
		     android:padding="8dp"
		     android:checked="true"
		     android:text="@string/tkxx"
		     android:singleLine="true" />

		 <TextView
		     android:id="@+id/tv_link"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBaseline="@+id/checkbox"
		     android:layout_alignBottom="@+id/checkbox"
		     android:layout_toRightOf="@+id/checkbox"
		     android:text="@string/xy"
		     android:textColor="@color/pro_bg"
		     />

</RelativeLayout>
        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_login_selector"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/next_step"
            android:textColor="@android:color/white"
            android:textSize="18sp" /></LinearLayout>
</LinearLayout>