<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_bar"
        layout="@layout/layout_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/cz_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
         
            android:layout_marginBottom="8dp"
            android:text="@string/cz_money"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_cz_money"
            android:layout_width="0dp"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_weight="2"
           android:background="@color/transparent"
            android:hint="@string/input_cz_money"
            android:inputType="number"
            android:paddingLeft="15dip"
            android:textColorHint="#ffdddddd" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_tzl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/sj_cz_money"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/sj_dz_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0.00 元"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/black2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_mone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:paddingLeft="15dip"
            android:shadowRadius="1.0"
            android:text="@string/czfs"
            android:textColorHint="#ffdddddd" 
            android:textSize="16dp"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/icon_zf" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_zf_ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_action_bar_height"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="@drawable/btn_login_selector"
        android:gravity="center"
        android:text="@string/zf"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_large" />

</LinearLayout>