<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/layout_bar"
        layout="@layout/layout_title" />

    <LinearLayout
        android:id="@+id/layout_no_msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_zwjl" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/zwjl"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_syktje"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/syktje"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_syktje_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/syktje_msg"
                android:textSize="16dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tv_zhkyye"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/zhkyye"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_zhkyye_msg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="12dp"
                android:singleLine="true"
                android:text="@string/zhkyye_msg"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp"
            android:background="@color/black2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_money"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:hint="@string/bb_msg"
                android:paddingLeft="15dip"
                android:shadowRadius="1.0"
                 android:inputType="number"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/input_bg"
            android:orientation="vertical" >

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:paddingLeft="15dip"
                android:shadowRadius="1.0"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/et_input_yzm"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/base_action_bar_height"
                    android:background="@color/transparent"
                    android:hint="@string/input_yzm"
                    android:paddingLeft="15dip"
                    android:shadowRadius="1.0"
                    android:textColorHint="#ffdddddd" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_code"
                android:layout_width="0dp"
                android:layout_height="@dimen/base_action_bar_height"
                android:layout_gravity="center"
                android:layout_marginRight="15dip"
                android:layout_weight="1"
                android:padding="4dp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_tz_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/qdtz"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</LinearLayout>