<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include
        android:id="@+id/layout_bar"
        layout="@layout/layout_title" />
<TextView
        android:id="@+id/rz_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:paddingLeft="24dp"
        android:text="@string/input_email"
        android:textSize="16dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="48dp" >
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/edittext_login"
                android:hint="@string/input_email_hint"
                android:paddingLeft="24dp"
                android:singleLine="true"
                android:textColorHint="#DDDDDD"
                android:textSize="16sp" />
            
        </RelativeLayout>

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_login_selector"
            android:paddingBottom="7dp"
            android:paddingTop="7dp"
            android:text="@string/is_ok"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
</LinearLayout>

</LinearLayout>
